--- a/src/css/new-styles.css
+++ b/src/css/new-styles.css
@@ -124,6 +124,35 @@ main {
 
 /**/
 
+.load-more-button {
+    display: block;
+    margin: 24px auto;
+    padding: 8px 16px;
+    background-color: #4e75ff;
+    color: #fff;
+    border: none;
+    border-radius: 8px;
+    cursor: pointer;
+    width: 125px;
+    height: 40px;
+    font-weight: 500;
+    font-size: 16px;
+    line-height: 1.5;
+    letter-spacing: 0.04em;
+    cursor: pointer;
+    transition: background-color 250ms ease-in-out;
+}
+
+.load-more-button:hover {
+    background-color: #6c8cff;
+}
+
+.is-hidden {
+    display: none;
+}
+
+/**/
+
 :root {
     --loader-size: 48px;
     --loader-thickness: 5px;
